--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <meta name="description" content="The most beautifil gentleman in the world" />
+  <title>Gentleman</title>
 </head>
 
 <body>
